--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@
 
 title: dodojackson's Home
 email: the.dodojackson@gmail.com #the@dodojackson.com
+author: Tim Dmoch
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to dodojackson's home!
+  One of my DoDo's is to document some projects here.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
