Trying to open external links in new tab

--- a/_config.yml
+++ b/_config.yml
@@ -25,14 +25,16 @@ description: >- # this means to ignore newlines until "baseurl:"
   Welcome to dodojackson's home!
   One of my DoDo's is to document some projects here.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "dodojackson.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  dodojackson
+linkedin_username: tim-dmoch
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-extlinks
 
 # Exclude from processing.
 # The following items will not be processed, by default.
