--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Welcome to dodojackson's home!
   One of my DoDo's is to document some projects here.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "dodojackson.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dodojackson.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  dodojackson
 linkedin_username: tim-dmoch
@@ -34,7 +34,6 @@ linkedin_username: tim-dmoch
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-target-blank
 
 # Exclude from processing.
 # The following items will not be processed, by default.
